--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,16 @@ buildscript {
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
     }
+
+    allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven {
+            url "https://repository.map.naver.com/archive/maven/"
+        }
+    }
+}
 }
 
 apply plugin: "com.facebook.react.rootproject"
