--- a/ios/foodiary.xcodeproj/xcshareddata/xcschemes/foodiary.xcscheme
+++ b/ios/foodiary.xcodeproj/xcshareddata/xcschemes/foodiary.xcscheme
@@ -60,6 +60,13 @@
             ReferencedContainer = "container:foodiary.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "IDEPreferLogStreaming"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
