--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "apisauce": "^3.0.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-modal": "^13.0.1",
