--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apisauce": "^3.0.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-date-picker": "^5.0.4",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1"
