--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,8 +2,8 @@ buildscript {
     ext {
         buildToolsVersion = "34.0.0"
         minSdkVersion = 23
-        compileSdkVersion = 34
-        targetSdkVersion = 34
+        compileSdkVersion = 33
+        targetSdkVersion = 33
         ndkVersion = "26.1.10909125"
         kotlinVersion = "1.9.22"
     }
@@ -21,9 +21,17 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        maven {
-            url "https://repository.map.naver.com/archive/maven/"
-        }
+        mavenLocal()
+        jcenter()
+        maven { url "https://repository.map.naver.com/archive/maven/" }
+        maven { url "$rootDir/../node_modules/react-native/android" }
+
+        // ADD THIS
+        maven { url 'https://maven.google.com' }
+
+        // ADD THIS
+        maven { url "https://www.jitpack.io" }
+    }
     }
 }
 }
