--- a/ios/foodiary/Info.plist
+++ b/ios/foodiary/Info.plist
@@ -41,8 +41,14 @@
 	<string>사용자가 앱을 사용하지 않아도 위치 권한을 항상 부여함</string>
 	<key>NSLocationTemporaryUsageDescriptionDictionary</key>
 	<dict/>
+	<key>NSFileProviderDomainUsageDescription</key>
+	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string>사용자가 앱을 사용할 때 카메라 사용 여부 확인</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>사용자가 앱을 사용할 때만 위치 권한을 부여함</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>사용자가 앱을 사용할 때 마이크 사용 여부 확인</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -55,6 +61,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사용자가 앱을 사용할 때 사진 이용 여부 확인</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 </dict>
