--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@actbase/react-daum-postcode": "^1.0.4",
     "@mj-studio/react-native-naver-map": "^1.5.9",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -21,7 +23,8 @@
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.10.4",
-    "react-native-screens": "^3.31.1"
+    "react-native-screens": "^3.31.1",
+    "react-native-webview": "^13.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
