--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -107,6 +107,7 @@ android {
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
+    implementation project(':@react-native-camera-roll_camera-roll')
     implementation("com.facebook.react:react-android")
     implementation('com.naver.maps:map-sdk:3.18.0')
     if (hermesEnabled.toBoolean()) {
@@ -117,3 +118,9 @@ dependencies {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+afterEvaluate {
+    tasks.named('packageDebugResources') {
+        dependsOn 'generateDebugResValues'
+    }
+}
