--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@actbase/react-daum-postcode": "^1.0.4",
     "@mj-studio/react-native-naver-map": "^1.5.9",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-camera-roll/camera-roll": "^7.8.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
