--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mj-studio/react-native-naver-map": "^1.5.9",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-camera-roll/camera-roll": "^7.8.1",
+    "@react-native-community/geolocation": "^3.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
