--- a/ios/foodiary/Info.plist
+++ b/ios/foodiary/Info.plist
@@ -42,13 +42,13 @@
 	<key>NSFileProviderDomainUsageDescription</key>
 	<string></string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>사용자가 앱을 사용하지 않아도 위치 권한을 항상 부여함</string>
+	<string>사용자가 앱을 사용하지 않아도 근처 매장 정보를 위해 사용자의 현재 위치에 접근</string>
 	<key>NSLocationTemporaryUsageDescriptionDictionary</key>
 	<dict/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>사용자가 앱을 사용할 때만 위치 권한을 부여함</string>
+	<string>사용자가 앱을 사용할 때만 근처 매장 정보를 위해 사용자의 현재 위치에 접근</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>사용자가 앱을 사용할 때 마이크 사용 여부 확인</string>
+	<string>사용자가 매장 관련 내용을 녹음하기 위해 접근</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>사용자가 매장 관련 사진을 이미 찍은 사진을 등록하기 위해 접근</string>
 	<key>UILaunchStoryboardName</key>
