--- a/ios/foodiary/Info.plist
+++ b/ios/foodiary/Info.plist
@@ -39,14 +39,12 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>사용자가 매장 관련 사진을 등록하기 위해 접근</string>
-	<key>NSFileProviderDomainUsageDescription</key>
-	<string></string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>사용자가 앱을 사용하지 않아도 근처 매장 정보를 위해 사용자의 현재 위치에 접근</string>
-	<key>NSLocationTemporaryUsageDescriptionDictionary</key>
-	<dict/>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>사용자가 앱을 사용할 때만 근처 매장 정보를 위해 사용자의 현재 위치에 접근</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>앱이 백그라운드에서도 위치 정보를 사용하여 실시간 위치 추적을 하여  정확한 위치에 위치 정보 접근</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>사용자가 앱을 사용하지 않아도 근처 매장 정보를 위해 사용자의 현재 위치에 접근</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>사용자가 매장 관련 내용을 녹음하기 위해 접근</string>
 	<key>NSPhotoLibraryUsageDescription</key>
@@ -60,8 +58,12 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
