--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@mj-studio/react-native-naver-map": "^1.5.9",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-camera-roll/camera-roll": "^7.8.1",
-    "@react-native-community/geolocation": "^3.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -23,6 +22,7 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-date-picker": "^5.0.4",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.10.4",
