--- a/ios/foodiary/Info.plist
+++ b/ios/foodiary/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
 	<string>foodiary</string>
 	<key>CFBundleExecutable</key>
@@ -39,12 +39,12 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>사용자가 매장 관련 사진을 등록하기 위해 접근</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>사용자가 앱을 사용할 때만 근처 매장 정보를 위해 사용자의 현재 위치에 접근</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>앱이 백그라운드에서도 위치 정보를 사용하여 실시간 위치 추적을 하여  정확한 위치에 위치 정보 접근</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>사용자가 앱을 사용하지 않아도 근처 매장 정보를 위해 사용자의 현재 위치에 접근</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>앱이 백그라운드에서도 위치 정보를 사용하여 실시간 위치 추적을 하여  정확한 위치에 위치 정보 접근</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>사용자가 앱을 사용할 때만 근처 매장 정보를 위해 사용자의 현재 위치에 접근</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>사용자가 매장 관련 내용을 녹음하기 위해 접근</string>
 	<key>NSPhotoLibraryUsageDescription</key>
